--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,11 @@
     <!-- Google Webfonts -->
     <link href='http://fonts.googleapis.com/css?family=Modern+Antiqua|Lora' rel='stylesheet' type='text/css' />
     
+    <link rel="stylesheet" href="/static/css/base.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/static/css/skeleton.css" type="text/css" media="screen, projection">
+    <link rel="stylesheet" href="/static/css/layout.css" type="text/css" media="screen, projection">
+
     <link rel="stylesheet" href="/static/css/syntax.css" type="text/css" />
-    <link rel="stylesheet" href="/static/css/main.css" type="text/css" media="screen, projection">
 
     <script src="/static/js/scale.fix.js"></script>
 
@@ -21,14 +24,19 @@
 <body>
 
 <header>
-    <h1>DCI - Data Context Interaction</h1>
-    <div id="main-menu">
-        {% for page in site.pages %}
-            <a href="{{page.url}}">{{page.title}}</a>
-        {% endfor %}
+    <div class="container">
+        <a id="icon" href="{{ site.baseurl }}"><img src="/static/img/dci.png" alt="DCI"></img></a>
+        <nav>
+            <ul>
+                {% assign pages_list = site.pages %}
+                {% assign group = 'navigation' %}
+                {% include pages_list %}
+            </ul>
+        </nav>
     </div>
 </header>
-<section id="content">
+
+<section id="content" class="container">
     {{ content }}
 </section>
 
