Added more space to the end of the page.
Use hardcoded links for languages, jekyll on github allows only ordering
by name.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -24,6 +24,10 @@ header {
 	background: #E5FFE5;
 }
 
+body {
+	margin-bottom: 10em;
+}
+
 header #icon { display: block; float: left; margin: 0.5em 0; }
 
 nav ul { float: right; margin: 0; }
