--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
     <![endif]-->
 </head>
 <body>
-
+<a name="Top">
 <header>
     <div class="container">
         <a id="icon" href="{{ site.baseurl }}"><img src="/static/img/dci.png" alt="DCI"></img></a>
